# mate-2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.sh  imgui.ini  main.py  pi.sh  server.sh  sturgeon.csv  update.sh
.github/workflows/: publish.yml
comms/: client.py
doc/: Architecture.md
firmware/rp2040/: boot.py  main.py
firmware/rp2040/funnyarduino/: funnyarduino.ino
firmware/rpi/: bno_test.py  config.json  data.py  main.py  mcu_interface.py  server.py  thruster_controller.py
float/: floatcode.ino  pyComms.py
gui/: Combined_GUI.py  Main_GUI.py  Test File  cameras.py  float_gui.py  rov.py  rov_gui.py
lib/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
lib/pigpio/: command.c  pigpio.h  pigpiod_if2.c  pigpiod_if2.h
mate-client/: package.json
mate-client/src/: bno.tsx  camera.tsx  index.css  main.tsx  thruster.tsx
mate-mc/: Cargo.toml
mate-mc/.cargo/: config.toml
mate-mc/src/: main.rs
mate-server/: Cargo.toml  build.rs
mate-server/src/: camera.rs  client.rs  data.rs  main.rs  thruster.rs
pi_python/: client.py  controls.py  pi.py  sensors.py  server.py  tsys01.py
src/: arduino.ino  camera_stream.cpp  camera_stream.h  client.cpp  comms.h  controls.cpp  controls.h  depth_sensor.cpp  depth_sensor.h  main.cpp  orientation_sensor.cpp  orientation_sensor.h  photogrammetry.cpp  photogrammetry.h  photogrammetry.swift  pi.cpp  pi.h  pid.cpp  pid.h  server.cpp
src/client/: client.cpp  font.h  photogrammetry.swift
src/microcontroller/: microcontroller.ino
src/server/: server.cpp
