[package]
name = "mate-mc"
description = "MATE serial client for the microcontroller attatched to RPI (currently the Adafruit Feather RP2040)"
version = "0.1.0"
edition = "2021"

[dependencies]
nb = "1.1.0"
adafruit-feather-rp2040 = "0.7.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
embedded-io = "0.6.1"
fugit = "0.3.7"
panic-halt = "0.2.0"
rp2040-hal = "0.9.2"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.8"
