[package]
name = "mate-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["camera", "client", "thruster"]
camera = []
client = []
thruster = []

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
hyper-util = "0.1.3"
include_dir = { version = "0.7.3", features = ["metadata"] }
mime_guess = "2.0.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = "0.11.24"
opencv = { version = "0.88.8", default-features = false, features = [
    "videoio",
    "imgcodecs",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.10"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
postcard = "1.0.8"
tokio-serial = "5.4.4"
bno055 = {version = "0.4.0", features = ["serde"]}
linux-embedded-hal = "0.4.0"
futures = "0.3.30"

[build-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
